Configure production deployment settings
- Add application-prod.properties for production configuration
- Update SecurityConfig with environment-based CORS settings
- Update Next.js config for production/development environments
- Add environment variable examples for deployment